🐛 Fix the bug with the number of covers

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -12,7 +12,6 @@ $thirdText: "Inter", sans-serif;
   color: $secondColor;
   font-family: $secondText;
   font-size: 2.2em;
-  margin-left: 1.5em;
 }
 
 h1,
